@@ -1,5 +1,6 @@
 == master
 
+* Add the ability to ignore method conflicts for helpers
 * Generate warnings for any helper, not just state helpers, that has a conflicting method defined in the class
 * Fix scopes in Sequel not working if the table name contains double underscores or is not a string/symbol
 * Add full support for chaining state scopes within Sequel integrations
